# pyLCS

./: .gitignore  .pytest.ini  README.md  create_list_of_input_files.py  double_gyre.py  pyproject.toml
src/: caching.py  cauchy_green.py  decorators.py  dtos.py  file_readers.py  file_utils.py  ftle.py  hyperparameters.py  integrate.py  interpolate.py  main.py  my_types.py  particle_position.py  particles.py
tests/: test_caching.py  test_file_readers.py  test_file_utils.py  test_ftle.py  test_integrate.py  test_interpolate.py  test_neigboring_particles.py
