[project]
name = "pyFTLE"
version = "0.2.0"
description = "Python package to compute Finite Time Lyapunov Exponents (FTLE)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configargparse>=1.7",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "nptyping>=2.5.0",
    "pre-commit>=4.0.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]
